create custom theme

--- a/src/app/layouts/main/main-layout.component.html
+++ b/src/app/layouts/main/main-layout.component.html
@@ -2,4 +2,6 @@
     <movies-logo></movies-logo>
     <span class="spacer"></span>
 
+    <movies-list-component [items]="layoutProperty.leftMenuItems" [direction]="layoutProperty.menuItemsDirection"></movies-list-component>
+    <movies-list-component [items]="layoutProperty.rightMenuItems" [direction]="layoutProperty.menuItemsDirection"></movies-list-component>
 </mat-toolbar>
