update search form style

--- a/src/app/layouts/main/main-layout.component.html
+++ b/src/app/layouts/main/main-layout.component.html
@@ -5,6 +5,7 @@
     </div>
     <div class="movie-header__menu">
         <movies-list-component [items]="layoutProperty.leftMenuItems" [direction]="layoutProperty.menuItemsDirection"></movies-list-component>
+        <movies-search-form></movies-search-form>
         <movies-list-component [items]="layoutProperty.rightMenuItems" [direction]="layoutProperty.menuItemsDirection"></movies-list-component>
     </div>
 </mat-toolbar>
