--- a/src/app/layouts/main/main-layout.component.scss
+++ b/src/app/layouts/main/main-layout.component.scss
@@ -1,15 +1,45 @@
+@use './../../core/utils/breakpoints/breakpoints.scss' as breakpoints;
+@use '@angular/material' as mat;
+@use './../../core/utils/theme/theme.scss' as theme;
+
 .movie-header {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     width: 100vw;
     height: 60px;
     overflow: hidden;
+    @media(min-width: breakpoints.$breakpoint-md) {
+        justify-content: flex-start;
+    }
     & .movie-header__menu {
         display: flex;
         align-items: center;
         justify-content: center;
         justify-content: space-around;
         width: 100%;
+    }
+}
+
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.95); // fond sombre
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    overflow-y: auto;
+    & .mobile-menu__content {
+        padding: 12px
+    }
+    & .mobile-menu__close {
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        padding: 12px;
     }
 }
