--- a/src/app/shared/logo/logo.component.scss
+++ b/src/app/shared/logo/logo.component.scss
@@ -1,7 +1,11 @@
 @use '@angular/material' as mat;
 @use './../../core/utils/theme/theme.scss' as theme;
+@use './../../core/utils/breakpoints/breakpoints.scss' as breakpoints;
 
 a.movie-title {
     color: mat.m2-get-color-from-palette(theme.$netflix-primary, 700);
-    font-size: 2.5rem;
+    font-size: 1.8rem;
+    @media(min-width: breakpoints.$breakpoint-md) {
+        font-size: 2.2rem;
+    }
 }
