--- a/src/app/shared/common/carousel/carousel.component.scss
+++ b/src/app/shared/common/carousel/carousel.component.scss
@@ -4,6 +4,11 @@
 .carousel-tabs {
     width: 100vw;
     overflow: hidden;
+    h2 {
+        color: white;
+        font-size: 36px;
+        margin-bottom: 16px;
+    }
     & .carousel-slide {
         position: relative;
     }
@@ -36,7 +41,24 @@
             color: white;
         }
     }
-    
+    .carousel-dots {
+        display: flex;
+        margin-top: 16px;
+        gap: 8px;
+
+        span {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background-color: white;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+
+            &.active {
+                background-color: mat.m2-get-color-from-palette(theme.$netflix-primary, 700);
+            }
+        }
+    }
 }
 
 ::ng-deep .mat-mdc-tab-header {
