fix height carousel

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,2 +1,4 @@
 <movies-main-layout></movies-main-layout>
-<movies-call-to-action [carouselMovies]="carouselMovies"></movies-call-to-action>
+<div class="home-cta__container">
+    <movies-call-to-action [carouselMovies]="carouselMovies"></movies-call-to-action>
+</div>
