--- a/src/app/layouts/main/main-layout.component.scss
+++ b/src/app/layouts/main/main-layout.component.scss
@@ -9,7 +9,7 @@
     width: 100vw;
     height: 60px;
     overflow: hidden;
-    @media(min-width: breakpoints.$breakpoint-md) {
+    @media(min-width: breakpoints.$breakpoint-lg) {
         justify-content: flex-start;
     }
     & .movie-header__menu {
