--- a/src/app/shared/ui/call-to-action/call-to-action.component.html
+++ b/src/app/shared/ui/call-to-action/call-to-action.component.html
@@ -1,1 +1,1 @@
-<movies-carousel [props]="carouselMovies"></movies-carousel>
+<movies-carousel class="carousel-movies-cta" [props]="carouselMovies"></movies-carousel>
