--- a/src/app/shared/ui/search-form/search-form.component.scss
+++ b/src/app/shared/ui/search-form/search-form.component.scss
@@ -14,7 +14,7 @@
 }
 
 ::ng-deep .mat-form-field-appearance-outline .mdc-text-field--outlined {
-  background-color: white;
+  background-color: theme.$netflix-light-color;
   border-radius: 25px;
 }
 
