--- a/src/app/core/utils/theme/theme.scss
+++ b/src/app/core/utils/theme/theme.scss
@@ -4,6 +4,10 @@ $netflix-primary: mat.m2-define-palette(mat.$m2-red-palette, 700);
 $netflix-accent: mat.m2-define-palette(mat.$m2-grey-palette, 500, 100, 700);
 $netflix-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
+$netflix-dark-color: #141414;
+$netflix-light-color: #e5e5e5;
+$netflix-hover-light-color: #b3b3b3;
+
 $netflix-theme: mat.m2-define-dark-theme((
   color: (
     primary: $netflix-primary,
