--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,7 @@
 @use 'sass:color';
 
 html, body {
-  background-color: #141414;
-  color: #fff;
+  background-color: theme.$netflix-dark-color;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0;
   overflow-x: hidden;
@@ -13,21 +12,21 @@ html, body {
 }
 
 body {
-  background-color: #141414; // fond noir Netflix
-  color: #e5e5e5;
+  background-color: theme.$netflix-dark-color; // fond noir Netflix
+  color: theme.$netflix-light-color;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #e5e5e5;
+  color: theme.$netflix-light-color;
   text-decoration: none;
   font-size: 14px;
 
   &:hover {
-    color: #b3b3b3;
+    color:  theme.$netflix-hover-light-color;
   }
   &:active {
-    color: white;
+    color:  theme.$netflix-light-color;
   }
 }
 
@@ -39,12 +38,12 @@ p {
 
 .mat-toolbar {
   background-color: #141414 !important;
-  color: white;
+  color: theme.$netflix-light-color;
 }
 
 .mat-card {
   background-color: #1f1f1f;
-  color: white;
+  color: theme.$netflix-light-color;
 }
 
 button.mat-mdc-unelevated-button {
