new release movie

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -7,4 +7,12 @@
         <movies-section-title [title]="'Recently Updated'"></movies-section-title>
         <movies-recently-updated [recentlyUpdated]="recentlyUpdatedMovies"></movies-recently-updated>
     </div>
+    <div class="new-release__container">
+        <movies-section-title [title]="'New Releases - Movies'"></movies-section-title>
+        <movies-new-release [newRelease]="newReleaseMovies"></movies-new-release>
+    </div>
+    <div class="new-release__container">
+        <movies-section-title [title]="'New Releases - Series'"></movies-section-title>
+        <movies-new-release [newRelease]="newReleaseSeries"></movies-new-release>
+    </div>
 </main>
