--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -11,6 +11,10 @@
     padding: 24px 0;
 }
 
+.new-release__container {
+    padding: 24px 0;
+}
+
 ::ng-deep .home-cta__container .mat-mdc-tab-body {
     height: calc(100vh - 60px);
 }
