--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -15,4 +15,8 @@
         <movies-section-title [title]="'New Releases - Series'"></movies-section-title>
         <movies-new-release [newRelease]="newReleaseSeries"></movies-new-release>
     </div>
+    <div class="recommendation__container">
+        <movies-section-title [title]="'Recommendation'"></movies-section-title>
+        <movies-recommendation [recommendation]="recommendations"></movies-recommendation>
+    </div>
 </main>
