create genre detail page

--- a/src/app/shared/ui/call-to-action/call-to-action.component.scss
+++ b/src/app/shared/ui/call-to-action/call-to-action.component.scss
@@ -1,6 +1,6 @@
 .carousel-movies-cta {
     position: absolute;
-    top: 60px;
+    top: 0;
     left: 0;
     width: 100vw;
     height: calc(100vh - 60px);
