--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@ body {
   background-color: theme.$netflix-dark-color; // fond noir Netflix
   color: theme.$netflix-light-color;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  height: 100vh;
 }
 
 main {
