other genres in genre detail page

--- a/src/app/features/genre/genre-detail/genre-detail.component.html
+++ b/src/app/features/genre/genre-detail/genre-detail.component.html
@@ -4,4 +4,8 @@
         <movies-section-title [title]="genre"></movies-section-title>
         <movies-genre-detail [genreDetail]="genreDetail"></movies-genre-detail>
     </div>
+    <div class="genre-detail__list-genre">
+        <movies-section-title title="Other genres"></movies-section-title>
+        <movies-genre-list [genreList]="genreList"></movies-genre-list>
+    </div>
 </main>
