create series page

--- a/src/app/features/movies/movies.component.html
+++ b/src/app/features/movies/movies.component.html
@@ -3,7 +3,7 @@
     <div class="movies-list__container">
         <ng-content *ngFor="let item of movies">
             <movies-section-title [title]="item.genre"></movies-section-title>
-            <movies-list [movies]="item.movies"></movies-list>
+            <movies-movies-list [movies]="item.movies"></movies-movies-list>
         </ng-content>
     </div>
 </main>
