create auth page

--- a/src/app/core/utils/theme/theme.scss
+++ b/src/app/core/utils/theme/theme.scss
@@ -8,6 +8,8 @@ $netflix-dark-color: #141414;
 $netflix-light-color: #e5e5e5;
 $netflix-hover-light-color: #b3b3b3;
 
+$netflix-dark-secondary-color: #303030;
+
 $netflix-theme: mat.m2-define-dark-theme((
   color: (
     primary: $netflix-primary,
