--- a/src/app/shared/ui/recently-updated/recently-updated.component.html
+++ b/src/app/shared/ui/recently-updated/recently-updated.component.html
@@ -14,5 +14,6 @@
                 </p>
             </div>
         </a>
+        <movies-action [actions]="item.actions"></movies-action>
     </div>
 </div>
