--- a/src/app/shared/ui/recently-updated/recently-updated.component.scss
+++ b/src/app/shared/ui/recently-updated/recently-updated.component.scss
@@ -3,6 +3,9 @@
     grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
     gap: 16px;
     & .recently-updated__item {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
         cursor: pointer;
         transition: transform 0.3s ease;
         &:hover {
@@ -14,7 +17,6 @@
         height: 300px;
     }
     & .recently-updated__details {
-        padding: 0 8px;
 
         & .recently-updated__title {
             font-weight: bold;
