--- a/src/app/shared/ui/recommendation/recommendation.component.html
+++ b/src/app/shared/ui/recommendation/recommendation.component.html
@@ -22,5 +22,6 @@
                 </div>
             </div>
         </a>
+        <movies-action [actions]="item.actions"></movies-action>
     </div>
 </div>
