--- a/src/app/shared/ui/series-list/series-list.component.html
+++ b/src/app/shared/ui/series-list/series-list.component.html
@@ -8,7 +8,7 @@
             <div class="series-list__details">
                 <h3 class="series-list__title">{{ item.card.title }}</h3>
                 <div class="series-list__duration">
-                    <p>Duration: </p>
+                    <p>Seasons: </p>
                     <button mat-stroked-button color="primary">
                         <mat-icon>schedule</mat-icon>
                         {{ item.duration }}
