--- a/src/app/shared/ui/recently-updated/recently-updated.component.scss
+++ b/src/app/shared/ui/recently-updated/recently-updated.component.scss
@@ -5,6 +5,7 @@
     & .recently-updated__item {
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         gap: 8px;
         cursor: pointer;
         transition: transform 0.3s ease;
