use movies only , remove all series contex

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -3,17 +3,9 @@
     <movies-call-to-action [carouselMovies]="carouselMovies"></movies-call-to-action>
 </div>
 <main class="home">
-    <div class="recently-updated__container">
-        <movies-section-title [title]="'Recently Updated'"></movies-section-title>
-        <movies-recently-updated [recentlyUpdated]="recentlyUpdatedMovies"></movies-recently-updated>
-    </div>
     <div class="new-release__container">
-        <movies-section-title [title]="'New Releases - Movies'"></movies-section-title>
+        <movies-section-title [title]="'New Releases'"></movies-section-title>
         <movies-new-release type="movies" [newRelease]="newReleaseMovies"></movies-new-release>
-    </div>
-    <div class="new-release__container">
-        <movies-section-title [title]="'New Releases - Series'"></movies-section-title>
-        <movies-new-release type="series" [newRelease]="newReleaseSeries"></movies-new-release>
     </div>
     <div class="recommendation__container">
         <movies-section-title [title]="'Recommendation'"></movies-section-title>
